--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "sai varun chowdary poludasu",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^5.5.0"
+    "mongodb": "^5.5.0",
+    "mongoos": "^0.0.1-security",
+    "mongoose": "^7.1.1"
   }
 }
